// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders default version 1`] = `
<button
  class="Button "
  type="button"
>
  Hello
</button>
`;

exports[`Button renders inverted version 1`] = `
<button
  class="Button Inverted"
  type="button"
>
  Hello
</button>
`;
